--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
-<!-- Welcome to {{title}} 
-Hello {{user}}
-{{product1.productName}}
-
-<ul>
-  <li *ngFor="let product of products">{{product.productName}}</li>
-</ul> -->
 <app-navi></app-navi>
-<app-category></app-category>
-<app-product></app-product>
-<router-outlet></router-outlet> 
+
+<div class="m-4">
+<app-car></app-car>
+</div>
+<router-outlet></router-outlet>
