--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,20 @@
-<app-navi></app-navi>
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="container">
+        <app-car-brand></app-car-brand>
+      </div>
+      <div class="container">
+        <app-car-color></app-car-color>
+      </div>
+    </div>
 
-<div class="m-4">
-<app-car></app-car>
+    <div class="col-md-9">
+      <app-car></app-car>
+      <app-rental></app-rental>
+      <app-customer></app-customer>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
