--- a/src/app/components/customer/customer/customer.component.html
+++ b/src/app/components/customer/customer/customer.component.html
@@ -1,1 +1,16 @@
-<p>customer works!</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th>CustomerId</th>
+        <th>UserId</th>
+        <th>Company Name</th>
+ 
+      </tr>
+  
+      <tr *ngFor="let customer of customers">
+        <td>{{ customer.customerId }}</td>
+        <td>{{ customer.userId }}</td>
+        <td>{{ customer.companyName }}</td>
+      </tr>
+    </thead>
+  </table>
